# ShopEase

./: .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0eb18b37a5d9_add_description_to_products.py  4e892772de03_add_image_url_to_products.py  6b58da2e9af0_create_initial_tables.py  ef9e4c6466bb_add_order_items_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  orders.py  products.py  users.py
backend/app/cache/: cache_service.py  in_memory_cache.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/dao/: base_dao.py  cart_item_dao.py  order_dao.py  order_item_dao.py  product_dao.py  user_dao.py
backend/app/domain/: cart_item.py  order.py  order_item.py  product.py  user.py
backend/app/repositories/: base.py  order_repository.py  product_repository.py  user_repository.py
backend/app/schemas/: order.py  product.py  user.py
backend/app/services/: auth_service.py  cart_service.py  notification_service.py  order_service.py  payment_factory.py  product_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_order_api.py  test_product_api.py
backend/tests/unit/: test_cart_service.py  test_in_memory_cache.py  test_order_service.py  test_payment_factory.py  test_product_service.py  test_user_service.py
docs/: class_diagram.mdx  hld.mdx  lld.mdx
docs/diagrams/: 1_high_level_arch.drawio  2_system_arch.drawio  3_low_level_arch.drawio  4_design_patterns.drawio  5_order_flow.drawio
(+15 files in other folders)
